--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,8 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
