--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node app.js",
+    "dev": "nodemon app.js",
     "start": "node app.js"
   },
   "repository": {
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "node-schedule": "^2.1.0",
+    "nodemon": "^2.0.20",
     "toad-scheduler": "^2.1.1"
   }
 }
