--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "mongoose": "^6.9.1",
     "node-schedule": "^2.1.0",
     "nodemon": "^2.0.20",
     "toad-scheduler": "^2.1.1"
